<resources>
    <string name="app_name">MenuProject</string>
    <string name="activity_new">Hello Tushar Rakholiya</string>
    <string name="main_activity">Main Activity</string>
    <string name="activity_help">Activity Help</string>
    <string name="new_activity">NEW ACTIVITY</string>
    <string name="button_sms">SMS</string>
    <string name="button_phone">PHONE</string>
    <string name="button_web">WEB</string>
    <string name="button_map">MAP</string>
    <string name="text_help">Help?</string>
    <string name="menuItem_settings">Settings</string>
    <string name="menuItem_help">Help</string>
    <string name="button_share">SHARE</string>
</resources>