<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEBDD"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button_newActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="221dp"
        android:layout_marginBottom="453dp"
        android:background="@drawable/round_button"
        android:text="@string/new_activity"
        android:textColor="#241515" />

    <Button
        android:id="@+id/button_sms"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="221dp"
        android:layout_marginBottom="532dp"
        android:background="@drawable/round_button"
        android:text="@string/button_sms"
        android:textColor="#1B1212" />

    <Button
        android:id="@+id/button_phone"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="213dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="511dp"
        android:background="@drawable/round_button"
        android:text="@string/button_phone"
        android:textColor="#260B0B" />

    <Button
        android:id="@+id/button_web"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="221dp"
        android:layout_marginBottom="373dp"
        android:background="@drawable/round_button"
        android:text="@string/button_web"
        android:textColor="#140E0E" />

    <Button
        android:id="@+id/button_map"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="216dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="425dp"
        android:background="@drawable/round_button"
        android:text="@string/button_map"
        android:textColor="#1C0707" />

    <Button
        android:id="@+id/button_share"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="213dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="352dp"
        android:background="@drawable/round_button"
        android:text="@string/button_share"
        android:textColor="#220D0D" />


</RelativeLayout>